Introduce formal `tee` concept which allows multiple error and output handlers, and capture of process output